lint convention plugin added

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -106,3 +106,8 @@ android-library = { id = "com.android.library", version.ref = "agp" }
 hilt-android-gradle-plugin = { id = "com.google.dagger.hilt.android", version.ref = "hiltPlugin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 
+
+## Plugins defined by this project
+custom-android-application = { id = "MultiModuleBuildLogic.android.application", version = "unspecified" }
+custom-android-hilt = { id = "MultiModuleBuildLogic.android.hilt", version = "unspecified" }
+custom-android-library = { id = "MultiModuleBuildLogic.android.library", version = "unspecified" }
