user network module added

--- a/usermodule/src/main/AndroidManifest.xml
+++ b/usermodule/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
 
     <application>
         <activity
-            android:name="com.myvaultspay.usermodule.MainActivityA"
+            android:name="com.myvaultspay.usermodule.presentation.activity.MainActivityA"
             android:exported="false" />
     </application>
 
